# OpenT5

./: .gitignore  README.md
src/: CMakeLists.txt  common_c.c  common_c.h
src/CL/: cl.c  cl.h
src/Com/: com.c  com.h  com_main.c  com_main.h
src/Dvar/: dvar.c  dvar.h
src/FS/: fs.c  fs.h
src/I/: i_string.c  i_string.h
src/NET/: net.c  net.h
src/PMem/: pmem.c  pmem.h
src/SEH/: seh.c  seh.h
src/Sys/: sys.c  sys.h  sys_critsect.c  sys_critsect.cpp  sys_critsect.h
src/platform/arch/x86/: x86.c  x86.h
src/platform/os/win/: win_common.h  win_locale.c  win_locale.h  win_main.c  win_main.h
